--- a/src/views/Register/Register.css
+++ b/src/views/Register/Register.css
@@ -1,3 +1,18 @@
+.register-container {
+  height: auto;
+  position: absolute;
+  padding-bottom: 70px;
+  padding-top: 70px;
+  box-shadow: 0 12px 18px 2px rgb(34 0 51 / 4%),
+    0 6px 22px 4px rgb(7 48 114 / 12%), 0 6px 10px -4px rgb(14 13 26 / 12%);
+  background: white;
+  border-radius: 7px;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+}
+
 .register-form {
   max-width: 500px;
   margin: 0 auto;
