--- a/src/components/Main/Item/Item.css
+++ b/src/components/Main/Item/Item.css
@@ -8,7 +8,7 @@ h2 {
 
 .item {
   width: 200px;
-  height: 200px;
+  height: auto;
 
   background-color: white;
 
@@ -32,7 +32,8 @@ h2 {
 .category-preview {
   display: flex;
   flex-direction: column;
-
+  justify-content: space-between;
+  height: 100%;
   align-items: center;
 }
 
