--- a/src/views/Upload/Upload.css
+++ b/src/views/Upload/Upload.css
@@ -30,7 +30,7 @@
   box-sizing: border-box;
   width: 100%;
   border-radius: 4px;
-  border: 1px solid black;
+  border: 1px solid rgba(0,0,0,0.5);
   padding: 10px 15px;
   margin-top: 10px;
   font-size: 18px;
@@ -67,15 +67,10 @@
 
 
 
-
-.upload-form hr {
-  margin-top: 30px;
-}
-
 .upload-form button {
   display: block;
   appearance: none;
-  margin-top: 40px;
+  margin-top: 10px;
   border: 1px solid #333;
   margin-bottom: 20px;
   text-transform: uppercase;
@@ -84,12 +79,24 @@
 }
 
 
+.upload-form-tags {
+  
+}
+
 .upload-form-tags input{
   width: 100% !important;
   height: 2em;
   margin-bottom: 0.5em;
+  background-color: #f0f0f0 !important;
+  border: none;
+
+
 }
 
 .upload-form h2{
   margin-bottom: 0.25em;
+}
+
+.upload-form input:not([type='button']):hover{
+  background-color: initial;
 }
