--- a/src/views/Upload/Upload.css
+++ b/src/views/Upload/Upload.css
@@ -1,3 +1,11 @@
+.upload-parent{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 2.5em;
+}
+
+
 .upload-container {
   height: auto;
   position: absolute;
@@ -7,10 +15,7 @@
     0 6px 22px 4px rgb(7 48 114 / 12%), 0 6px 10px -4px rgb(14 13 26 / 12%);
   background: white;
   border-radius: 7px;
-  top: 50%;
-  left: 50%;
-  margin-right: -50%;
-  transform: translate(-50%, -50%);
+
 }
 
 .upload-form {
@@ -95,6 +100,7 @@
 
 .upload-form h2{
   margin-bottom: 0.25em;
+  font-size: 1.25em;
 }
 
 .upload-form input:not([type='button']):hover{
