Added sorting in category view & search by title

--- a/src/components/Main/Item/Item.css
+++ b/src/components/Main/Item/Item.css
@@ -38,10 +38,10 @@ h2 {
 }
 
 .general-img {
-  width: 55px;
-  height: 50px;
+  width: 65px;
+  height: 65px;
 
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .extensions-category {
