--- a/src/components/Main/Item/Item.css
+++ b/src/components/Main/Item/Item.css
@@ -53,3 +53,102 @@ h2 {
 
   color: #000;
 }
+
+
+.card{
+  position: relative;
+  width: 13em;
+  height: 13em;
+  color: #a18a96;
+  background-color: #00f8c2;
+  border-radius: 20px;
+  overflow: hidden;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.25);
+}
+
+.card_content{
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  padding: 8px;
+  background-color: rgb(234 234 234);
+  border-top-left-radius: 20px;
+  transform: translateY(70px);
+  transition: transform .25s;
+}
+
+.card_content::before {
+  content: '';
+  position: absolute;
+  top: -47px;
+  right: -28px;
+  width: 100px;
+  height: 100px;
+  transform: rotate(-175deg);
+  border-radius: 50%;
+  box-shadow: inset 48px 48px rgb(234 234 234);
+  z-index:-1;
+}
+
+.card_title{
+  color: #252525;
+  line-height: 15px;
+  margin-left: 0.5em;
+}
+
+.card_subtitle{
+  display: block;
+  font-size: 16px;
+  color: #252525;
+  margin-bottom: 10px;
+  margin-left: 0.5em;
+}
+
+.card_description{
+  opacity: 0px;
+  transition: opacity .5s;
+  margin-left: 0.5em;
+}
+
+.card:hover .card_content{
+  transform: translateY(0);
+}
+
+.card:hover .card_description{
+  opacity: 1;
+  transition-delay: 0.25s;
+  margin-left: 0.5em;
+}
+
+/* .card_button{
+  padding: 3px;
+  font-size: 20px;
+  min-width:3em;
+} */
+
+
+.card_button {
+  display: inline-block;
+  padding: 0.5em 1.7em;
+  margin: 0 0.1em 0.1em 0;
+  border: 0.16em solid #718bf7;
+  border-radius: 2em;
+  font-size: 13px;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
+  color: rgb(48, 48, 48);
+  text-shadow: 0 0.04em 0.04em rgba(255, 255, 255, 0.253);
+  text-align: center;
+  transition: all 0.2s;
+}
+
+.card_button:hover {
+  color: black;
+  background-color: #718bf7;
+}
