--- a/src/views/ProfilePage/ProfilePage.css
+++ b/src/views/ProfilePage/ProfilePage.css
@@ -37,3 +37,11 @@
   background-color: rgb(9, 111, 9);
   color: white;
 }
+
+.user-info h3 {
+  font-weight: normal;
+}
+
+.user-info span {
+  font-weight: bold;
+}
