--- a/src/components/Main/Item/Item.css
+++ b/src/components/Main/Item/Item.css
@@ -54,8 +54,7 @@ h2 {
   color: #000;
 }
 
-
-.card{
+.card {
   position: relative;
   width: 13em;
   height: 13em;
@@ -66,7 +65,7 @@ h2 {
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.25);
 }
 
-.card_content{
+.card_content {
   position: absolute;
   display: flex;
   flex-direction: column;
@@ -78,7 +77,7 @@ h2 {
   background-color: rgb(234 234 234);
   border-top-left-radius: 20px;
   transform: translateY(70px);
-  transition: transform .25s;
+  transition: transform 0.25s;
 }
 
 .card_content::before {
@@ -91,16 +90,16 @@ h2 {
   transform: rotate(-175deg);
   border-radius: 50%;
   box-shadow: inset 48px 48px rgb(234 234 234);
-  z-index:-1;
+  z-index: -1;
 }
 
-.card_title{
+.card_title {
   color: #252525;
   line-height: 15px;
   margin-left: 0.5em;
 }
 
-.card_subtitle{
+.card_subtitle {
   display: block;
   font-size: 16px;
   color: #252525;
@@ -108,17 +107,21 @@ h2 {
   margin-left: 0.5em;
 }
 
-.card_description{
+.card_description {
   opacity: 0px;
-  transition: opacity .5s;
+  transition: opacity 0.5s;
   margin-left: 0.5em;
 }
 
-.card:hover .card_content{
+.card_description button {
+  cursor: pointer;
+}
+
+.card:hover .card_content {
   transform: translateY(0);
 }
 
-.card:hover .card_description{
+.card:hover .card_description {
   opacity: 1;
   transition-delay: 0.25s;
   margin-left: 0.5em;
@@ -130,7 +133,6 @@ h2 {
   min-width:3em;
 } */
 
-
 .card_button {
   display: inline-block;
   padding: 0.5em 1.7em;
@@ -140,7 +142,7 @@ h2 {
   font-size: 13px;
   box-sizing: border-box;
   text-decoration: none;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: bold;
   color: rgb(48, 48, 48);
   text-shadow: 0 0.04em 0.04em rgba(255, 255, 255, 0.253);
