--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -3,3 +3,17 @@
   align-items: center;
   justify-content: center;
 }
+
+.glass-container {
+  color: white;
+
+  width: 85%;
+  margin: 0 auto;
+  margin-top: 1%;
+  margin-bottom: 1% !important;
+
+  border: 3px solid rgba(255, 255, 255, 0.3);
+  border-radius: 16px;
+
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+}
