--- a/src/views/Upload/Upload.css
+++ b/src/views/Upload/Upload.css
@@ -1,21 +1,26 @@
-.upload-parent{
+.upload-parent {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 2.5em;
 }
 
-
 .upload-container {
   height: auto;
   position: absolute;
   padding-bottom: 70px;
   padding-top: 70px;
-  box-shadow: 0 12px 18px 2px rgb(34 0 51 / 4%),
-    0 6px 22px 4px rgb(7 48 114 / 12%), 0 6px 10px -4px rgb(14 13 26 / 12%);
-  background: white;
-  border-radius: 7px;
 
+  color: white;
+
+  background: rgba(255, 255, 255, 0.2);
+
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 16px;
+
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
 }
 
 .upload-form {
@@ -27,82 +32,70 @@
 }
 
 .upload-form p {
-  color: red;
+  font-weight: bold;
 }
 
 .upload-form input {
   display: block;
   box-sizing: border-box;
   width: 100%;
-  border-radius: 4px;
-  border: 1px solid rgba(0,0,0,0.5);
   padding: 10px 15px;
   margin-top: 10px;
   font-size: 18px;
   font-weight: bold;
+
+  background: rgba(255, 255, 255, 0.2);
+
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 16px;
 }
 
-.upload-form input:not([type='button']):hover {
-  background-color: rgb(248, 248, 248);
+.upload-form input:hover {
+  background: rgba(255, 255, 255, 0.295);
 }
 
-.upload-form input:not([type='button']):focus {
-  background-color: white;
-}
-
-
-
-.submitButton{
+.upload-form input[type='file'] {
   cursor: pointer;
-  background: rgba(0, 122, 205, 255);
+}
+
+.upload-form input:active {
+  border: none !important;
+  outline: none !important;
+}
+
+.upload-form button {
+  cursor: pointer;
   text-transform: uppercase;
   border: none;
   margin-top: 40px;
   padding: 20px;
+
   font-size: 18px;
   font-weight: bold;
   letter-spacing: 10px;
+
+  background: rgba(255, 255, 255, 0.2);
+
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 16px;
 }
 
-
-
-.upload-form input:disabled {
-  opacity: 0.4;
+.upload-form button:hover {
+  transition: 0.3s all;
+  background: rgba(255, 255, 255, 0.295) !important;
 }
 
-
-
-.upload-form button {
-  display: block;
-  appearance: none;
-  margin-top: 10px;
-  border: 1px solid #333;
-  margin-bottom: 20px;
-  text-transform: uppercase;
-  padding: 10px 20px;
-  border-radius: 4px;
-}
-
-
-.upload-form-tags {
-  
-}
-
-.upload-form-tags input{
+.upload-form-tags input {
   width: 100% !important;
   height: 2em;
   margin-bottom: 0.5em;
-  background-color: #f0f0f0 !important;
+  color: white !important;
+
+  background: rgba(255, 255, 255, 0.2) !important;
   border: none;
-
-
 }
 
-.upload-form h2{
+.upload-form h2 {
   margin-bottom: 0.25em;
   font-size: 1.25em;
-}
-
-.upload-form input:not([type='button']):hover{
-  background-color: initial;
 }
