User can now reset password via email

--- a/src/components/ScrollTop/ScrollTop.css
+++ b/src/components/ScrollTop/ScrollTop.css
@@ -13,3 +13,9 @@
 
   padding-right: 1.5em;
 }
+
+@media only screen and (max-width: 768px) {
+  [class*='scroll-holder'] {
+    opacity: 0;
+  }
+}
