--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,45 @@
 * {
   font-family: 'Inter', sans-serif;
+
+  
 }
 
 body {
   margin: 0;
+  overflow-y: hidden;
+  overflow: overlay !important; 
+  
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
   background-color: rgb(248, 248, 248);
 
-  background: url(assets/background.jpg) center / cover no-repeat fixed;
+  background: url(assets/background_blured.jpg) center / cover no-repeat fixed;
   min-height: 100vh;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  monospace;
+}
+
+
+::-webkit-scrollbar {
+  width: 2em;
+  
+}
+
+::-webkit-scrollbar-track {
+  background-color: none !important;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 2rem;
+  border-left: 0;
+  border-right: 0;
+  background-color: rgba(255, 255, 255, 0.45);
+  background-clip: content-box;
+  border: 0.75rem solid transparent;
+  transition: 0.25s ease;
 }
