--- a/src/views/SingleExtensionPage/Markdown.css
+++ b/src/views/SingleExtensionPage/Markdown.css
@@ -3,11 +3,15 @@
   -webkit-text-size-adjust: 100%;
   margin: 0;
   color: #24292f;
-  background-color: #ffffff;
+  background-color: none;
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
-  font-size: 16px;
+  font-size: 18px;
+  font-weight: 600;
   line-height: 1.5;
   word-wrap: break-word;
+  border-radius: 16px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .markdown-body .octicon {
