--- a/src/views/SingleExtensionPage/SingleExtension.css
+++ b/src/views/SingleExtensionPage/SingleExtension.css
@@ -5,3 +5,16 @@
 }
 
 
+.glass-container-single {
+  color: black;
+
+  width: 85%;
+  margin: 0 auto;
+  margin-top: 1%;
+  margin-bottom: 1% !important;
+
+  border: 3px solid rgba(255, 255, 255, 0.3);
+  border-radius: 16px;
+
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+}
