--- a/src/components/Main/Item/Item.css
+++ b/src/components/Main/Item/Item.css
@@ -148,6 +148,7 @@ h2 {
   box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
   text-align: center;
   transition: all 0.2s;
+  cursor: pointer;
 }
 
 .card_button:hover {
