--- a/src/views/SingleExtensionPage/SingleExtension.css
+++ b/src/views/SingleExtensionPage/SingleExtension.css
@@ -7,14 +7,23 @@
 
 .glass-container-single {
   color: black;
-
   width: 85%;
   margin: 0 auto;
   margin-top: 1%;
   margin-bottom: 1% !important;
-
-  border: 3px solid rgba(255, 255, 255, 0.3);
   border-radius: 16px;
+}
 
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+
+.git_field{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  cursor: pointer;
+  padding: 16px;
+  border-radius: 16px;
+}
+
+.git_field:hover{
+  background-color: rgba(255, 255, 255, 0.3);
 }
