--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,11 @@
 * {
   font-family: 'Inter', sans-serif;
-
-  
 }
 
 body {
   margin: 0;
   overflow-y: hidden;
-  overflow: overlay !important; 
-  
+  overflow: overlay !important;
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -16,18 +13,17 @@ body {
   background-color: rgb(248, 248, 248);
 
   background: url(assets/background_blured.jpg) center / cover no-repeat fixed;
+  background-position: 25% 30%;
   min-height: 100vh;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-  monospace;
+    monospace;
 }
-
 
 ::-webkit-scrollbar {
   width: 2em;
-  
 }
 
 ::-webkit-scrollbar-track {
