--- a/src/views/Upload/Upload.css
+++ b/src/views/Upload/Upload.css
@@ -99,3 +99,12 @@
   margin-bottom: 0.25em;
   font-size: 1.25em;
 }
+
+
+.upload-form *:focus-visible{
+  outline: none !important;
+}
+
+.upload-form input{
+  color: white !important;
+}
