--- a/src/views/Upload/Upload.css
+++ b/src/views/Upload/Upload.css
@@ -48,6 +48,8 @@
 
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 16px;
+
+  transition: background-color 0.25s;
 }
 
 .upload-form input:hover {
