--- a/src/components/Main/Item/Item.css
+++ b/src/components/Main/Item/Item.css
@@ -78,7 +78,6 @@ h2 {
   border-top-left-radius: 20px;
   transform: translateY(70px);
   transition: transform 0.25s;
-
 }
 
 .card_content::before {
@@ -115,7 +114,6 @@ h2 {
   margin-left: 0.5em;
 }
 
-
 .card:hover .card_content {
   transform: translateY(0);
 }
@@ -145,7 +143,8 @@ h2 {
   font-weight: bold;
   color: black;
   text-shadow: 0 0.04em 0.04em rgba(255, 255, 255, 0.253);
-  box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+  box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%),
+    0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
   text-align: center;
   transition: all 0.2s;
   cursor: pointer;
@@ -153,5 +152,5 @@ h2 {
 
 .card_button:hover {
   color: black;
-  background-color: #1565c0;
+  background-color: #1976d2;
 }
