--- a/src/components/Main/Item/Item.css
+++ b/src/components/Main/Item/Item.css
@@ -124,12 +124,6 @@ h2 {
   margin-left: 0.5em;
 }
 
-/* .card_button{
-  padding: 3px;
-  font-size: 20px;
-  min-width:3em;
-} */
-
 .card_button {
   display: inline-block;
   padding: 0.5em 1.7em;
@@ -143,8 +137,8 @@ h2 {
   font-weight: bold;
   color: black;
   text-shadow: 0 0.04em 0.04em rgba(255, 255, 255, 0.253);
-  box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%),
-    0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+  box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%),
+    0px 1px 5px 0px rgb(0 0 0 / 12%);
   text-align: center;
   transition: all 0.2s;
   cursor: pointer;
